# highlight2api

./: .gitignore  Dockerfile  README.md  login.py  pyproject.toml
.github/workflows/: docker-image.yml
app/: auth.py  chat_service.py  config.py  errors.py  file_service.py  login_service.py  model_service.py  models.py  utils.py
app/routes/: api.py  login.py
static/: login.html
