[project]
name = "highlightai2api"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "curl-cffi>=0.13.0",
    "fastapi>=0.116.1",
    "filetype>=1.2.0",
    "loguru>=0.7.3",
    "pycryptodome>=3.23.0",
    "sse-starlette>=3.0.2",
    "uvicorn>=0.35.0",
]
